--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -66,7 +66,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Fecha presentación desde:(*)</label>
+                <label class="col-sm-2 control-label">Fecha  desde:(*)</label>
                 <div class="col-sm-2">
                     <input type="text" class="form-control fecha_format" id="fdesde" th:field="*{fechapresentaciondesde}"onchange="isDat(this.value,'fdesde');Fechas(this.value,$('#fhasta').val().toString(),'fdesde','fhasta')"
 isDat(this.value,'desde')/>
