--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -56,13 +56,13 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha de Presentación:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentaciondesde, 'dd-MMM-yyyy')}">Valor de estado</p>
+                        <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentaciondesde, 'dd/MM/yyyy')}">Valor de estado</p>
                     </div>
                 </div>
  <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha de Presentación:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentacionhasta, 'dd-MMM-yyyy')}">Valor de estado</p>
+                        <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentacionhasta, 'dd/MM/yyyy')}">Valor de estado</p>
                     </div>
                 </div>
                     <!--jala los empleados-->
