--- a/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
+++ b/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
@@ -26,7 +26,7 @@
             <div>
                 <form class="form-horizontal" th:object="${formusuariorol}" th:action="@{../usuariorol}" method="post" >
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Nombre de Usuario:</label>
+                        <label class="col-sm-2 control-label">Usuario:</label>
                         <div class="col-sm-8">
                         <select class="form-control" name="usuario.codigousuario" >
                                 <option th:each="c:${formusuariorol.usuarios}" th:value="${c.codigousuario}" th:text="${c.nombreusuario}"></option>
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">nombre del rol:</label>
+                        <label class="col-sm-2 control-label">Rol:</label>
                         <div class="col-sm-8">
                         <select class="form-control" name="rol.codigorol" >
                                 <option th:each="c:${formusuariorol.roles}" th:value="${c.codigorol}" th:text="${c.nombrerol}"></option>
@@ -44,7 +44,7 @@
 
                     <div class="col-md-12">
                     <div class="row" align="center">
-                            <button type="button" class="btn btn-info"><a href="#" th:href="@{/usuariosroles/}">Regresar</a></button>
+                        <a href="#" th:href="@{/usuariosroles/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>   
                             <button type="submit" class="btn btn-primary">Guardar</button>
                             <button type="reset" class="btn btn-default">Limpiar</button>
                     </div>
